--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # dependencies
+functions/node_modules
 /node_modules
 /.pnp
 .pnp.js
@@ -8,6 +9,7 @@
 
 # production
 /build
+/dist
 
 # misc
 .DS_Store
@@ -25,3 +27,6 @@ yarn-error.log*
 
 # vscode config
 .vscode
+
+.firebase/
+
